Container width, min-width, and media queries q

--- a/responsive.html
+++ b/responsive.html
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="responsive.css">
   <link rel="stylesheet" type="text/css" href="responsive.css">
+  <link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 900px)' href='css/medium.css' />
 </head>
 <body>
   <header>
